<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="radio_button_first">Glide - Image Loading Library by BumpTech</string>
    <string name="radio_button_second">Load App - Current repository by Udacity</string>
    <string name="radio_button_third">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="select_radio_button">Please select at least one option</string>

    <string name="download">Download</string>
    <string name="download_completed">Download Completed</string>

    <string name="permission_explanation">In order to show notifications in this app, you need to allow this permission.</string>
    <string name="request_permission">Request Notification Permission</string>
    <string name="details">Details</string>
    <string name="notification_channel_id" translatable="false">notification_channel</string>
    <string name="notification_channel_name">Notification</string>
    <string name="notification_blocked">Notification blocked</string>

    <string name="status_success">Success</string>
    <string name="status_failed">Failed</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
    <string name="ok">OK</string>
    <string name="loading">We are loading</string>
</resources>
