<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    app:layoutDescription="@xml/motion_animation"
    tools:context=".DetailActivity">

    <TextView
        android:id="@+id/fileNameLabelTextView"
        style="@style/DetailsTextViewStyle"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/file_name"
        app:layout_constraintEnd_toStartOf="@+id/fileNameTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fileNameTextView" />

    <TextView
        android:id="@+id/fileNameTextView"
        style="@style/DetailsTextViewStyle"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fileNameLabelTextView"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="LoadApp - Current repository by Udacity" />

    <TextView
        android:id="@+id/statusLabelTextView"
        style="@style/DetailsTextViewStyle"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/status"
        app:layout_constraintEnd_toStartOf="@+id/statusTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/statusTextView" />

    <TextView
        android:id="@+id/statusTextView"
        style="@style/DetailsTextViewStyle"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/statusLabelTextView"
        app:layout_constraintStart_toStartOf="@+id/fileNameTextView"
        app:layout_constraintTop_toBottomOf="@+id/fileNameTextView"
        tools:text="Fail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/okButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/orange_500"
        android:padding="5dp"
        android:text="@string/ok"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.motion.widget.MotionLayout>